--- a/Develop/style.css
+++ b/Develop/style.css
@@ -27,15 +27,20 @@ textarea{
 
 .time-block{
   text-align: center;
-  border-radius: 15px;
-  /* padding-right: 5%;
-  padding-left: 5%; */
+  padding-left: 10%;
+  padding-right: 10%;
+  margin-bottom: 80px;
+
 }
 
 .row {
-  white-space: pre-wrap;
-  height: 80px;
-  border-top: 1px solid white;;
+  /* white-space: pre-wrap; */
+  height: 60px;
+  /* border-top: 1px solid white;; */
+  /* margin-bottom: 5px; */
+  line-height:  50px;
+  align-content: center;
+  vertical-align: middle;
 }
 
 .hour {
@@ -59,14 +64,23 @@ textarea{
   color: white;
 }
 
-.saveBtn {
-  border-left: 1px solid black;
-  border-top-right-radius: 15px;
-  border-bottom-right-radius: 15px;
-  background-color: #06AED5;
-  color: white;
+input{
+  display: flex;
+  width: 100%;
+  height: 60px;
+  vertical-align: middle;
+  
 }
 
+.saveBtn {
+  /* border-left: 1px solid black; */
+  /* border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px; */
+  height: 60px;
+  background-color: #06AED5;
+  color: white;
+  align-items: center;
+}
 .saveBtn i:hover {
   font-size: 20px;
   transition: all .3s ease-in-out;
