--- a/Develop/style.css
+++ b/Develop/style.css
@@ -21,9 +21,9 @@ textarea{
   border-bottom: 10px solid black;
 }
 
-.description{
+/* .description{
   white-space: pre-wrap;
-}
+} */
 
 .time-block{
   text-align: center;
@@ -34,34 +34,22 @@ textarea{
 }
 
 .row {
-  /* white-space: pre-wrap; */
   height: 60px;
-  /* border-top: 1px solid white;; */
-  /* margin-bottom: 5px; */
   line-height:  50px;
   align-content: center;
   vertical-align: middle;
 }
 
-.hour {
-  background-color: #ffffff;
-  color: #000000;
-  border-top: 1px dashed #000000;
-}
-
 .past {
   background-color: #d3d3d3;
-  color: white;
 }
 
 .present {
   background-color: #ff6961;
-  color: white;
 }
 
 .future {
   background-color: #77dd77;
-  color: white;
 }
 
 input{
@@ -73,9 +61,6 @@ input{
 }
 
 .saveBtn {
-  /* border-left: 1px solid black; */
-  /* border-top-right-radius: 15px;
-  border-bottom-right-radius: 15px; */
   height: 60px;
   background-color: #06AED5;
   color: white;
