--- a/Develop/style.css
+++ b/Develop/style.css
@@ -21,10 +21,6 @@ textarea{
   border-bottom: 10px solid black;
 }
 
-/* .description{
-  white-space: pre-wrap;
-} */
-
 .time-block{
   text-align: center;
   padding-left: 10%;
@@ -57,7 +53,7 @@ input{
   width: 100%;
   height: 60px;
   vertical-align: middle;
-  
+  padding-left: 25px;
 }
 
 .saveBtn {
@@ -66,7 +62,7 @@ input{
   color: white;
   align-items: center;
 }
-.saveBtn i:hover {
+.saveBtn:hover {
   font-size: 20px;
   transition: all .3s ease-in-out;
 }
