--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ textarea{
 }
 
 .row {
-  height: 60px;
+  height: auto;
   line-height:  50px;
   align-content: center;
   vertical-align: middle;
@@ -51,13 +51,13 @@ textarea{
 input{
   display: flex;
   width: 100%;
-  height: 60px;
+  height: auto;
   vertical-align: middle;
   padding-left: 25px;
 }
 
 .saveBtn {
-  height: 60px;
+  height: auto;
   background-color: #06AED5;
   color: white;
   align-items: center;
